i trying 2.0 update