@@ -124,7 +124,7 @@ public abstract class BaseSafraClientConfig {
 
     public synchronized String ensureOpenToLanFixedCode() {
         String normalized = normalizeOpenToLanFixedCode(openToLanFixedCode);
-        if (normalized.isBlank()) {
+        if (normalized.trim().isEmpty()) {
             normalized = P2pShareCode.createRendezvousCode(P2pShareCode.FIXED_RENDEZVOUS_CODE_LENGTH);
         }
         if (!normalized.equals(openToLanFixedCode)) {
@@ -221,7 +221,7 @@ public abstract class BaseSafraClientConfig {
     }
 
     private static String normalizeSiteApiVersion(String siteApiVersion) {
-        return siteApiVersion == null || siteApiVersion.isBlank()
+        return siteApiVersion == null || siteApiVersion.trim().isEmpty()
             ? "1.0"
             : siteApiVersion.trim();
     }
