@@ -47,7 +47,7 @@ public final class SafraBuildInfo {
 
     private static String value(Properties properties, String key) {
         String value = properties.getProperty(key);
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             return DEFAULT_VERSION;
         }
 
